# matagent

./: .gitignore  README.md  setup.cfg
agent4crys/component/contriever/pretrain/: util.py
agent4crys/component/proposer/: __init__.py  gpt.py
agent4crys/diffusion/util/: eval.py
agent4crys/evaluation/pretrain/: util.py
agent4crys/scripts/: inference.py
